crates/parser/src/snapshots/parser__latex__tests__parse@theorem_definition__theorem_definition_full.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/theorem_definition/theorem_definition_full.txt
---
ROOT@0..31
  PREAMBLE@0..31
    THEOREM_DEFINITION@0..31
      COMMAND_NAME@0..11 "\\newtheorem"
      CURLY_GROUP_WORD@11..16
        L_CURLY@11..12 "{"
        KEY@12..15
          WORD@12..15 "foo"
        R_CURLY@15..16 "}"
      BRACK_GROUP_WORD@16..21
        L_BRACK@16..17 "["
        KEY@17..20
          WORD@17..20 "bar"
        R_BRACK@20..21 "]"
      CURLY_GROUP@21..26
        L_CURLY@21..22 "{"
        TEXT@22..25
          WORD@22..25 "Foo"
        R_CURLY@25..26 "}"
      BRACK_GROUP_WORD@26..31
        L_BRACK@26..27 "["
        KEY@27..30
          WORD@27..30 "baz"
        R_BRACK@30..31 "]"

