crates/parser/src/snapshots/parser__latex__tests__parse@theorem_definition__theorem_definition_name_with_counter.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/theorem_definition/theorem_definition_name_with_counter.txt
---
ROOT@0..21
  PREAMBLE@0..21
    THEOREM_DEFINITION@0..21
      COMMAND_NAME@0..11 "\\newtheorem"
      CURLY_GROUP_WORD@11..16
        L_CURLY@11..12 "{"
        KEY@12..15
          WORD@12..15 "foo"
        R_CURLY@15..16 "}"
      BRACK_GROUP_WORD@16..21
        L_BRACK@16..17 "["
        KEY@17..20
          WORD@17..20 "bar"
        R_BRACK@20..21 "]"

