crates/parser/src/snapshots/parser__latex__tests__parse@theorem_definition__theorem_definition_name_with_description.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/theorem_definition/theorem_definition_name_with_description.txt
---
ROOT@0..21
  PREAMBLE@0..21
    THEOREM_DEFINITION_AMSTHM@0..21
      COMMAND_NAME@0..11 "\\newtheorem"
      CURLY_GROUP_WORD@11..16
        L_CURLY@11..12 "{"
        KEY@12..15
          WORD@12..15 "foo"
        R_CURLY@15..16 "}"
      CURLY_GROUP@16..21
        L_CURLY@16..17 "{"
        TEXT@17..20
          WORD@17..20 "Foo"
        R_CURLY@20..21 "}"

